fix: make near you page readable with 200% text scaling

--- a/app/component/route.scss
+++ b/app/component/route.scss
@@ -428,7 +428,7 @@ $margin-left-right: 1.333em;
     margin-left: 4px;
     padding: 0px 5px 0px 5px;
     letter-spacing: -0.37px;
-    height: 16px;
+    height: 1.45em;
   }
 }
 
