--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -379,7 +379,7 @@
       font-size: $font-size-small;
       font-weight: $font-weight-medium;
       text-align: center;
-      margin-left: 1em;
+      margin-left: 13px;
       margin-right: 0.3em;
       line-height: 1.6;
       white-space: nowrap;
