--- a/app/component/zone-icon.scss
+++ b/app/component/zone-icon.scss
@@ -2,8 +2,8 @@
   .circle {
     display: flex;
     justify-content: center;
-    width: 14px;
-    height: 14px;
+    width: 1.16em;
+    height: 1.16em;
     border-radius: 50%;
     font-size: 12px;
     color: #fff;
